--- a/Css/style.css
+++ b/Css/style.css
@@ -5,18 +5,77 @@ body{
     margin: 0;
     padding: 0;
 }
+.ola{
+    background-color: #F8C947;
+}
+.conte{
+    background-color: #F8C947;
+}
 @font-face {
     font-family: simpson-font;
     src: url(../fonts/Simpsonfont\ DEMO.otf);
 }
 .title{
     height: ;
-    background-color: ;
-    padding: 8vh;
+    
+    padding: 12vh;
 }
 .text{
     text-align: center;
     font-family: simpson-font;
     font-size: 5rem;
+    color: white;
+    -webkit-text-stroke: 3px black;
 
+}
+.ima{
+    
+}
+.desc{
+    
+    text-align: justify;
+    font-size: 1.5rem;
+    
+    
+    
+}
+.titu{
+    text-align: center;
+    font-size: 5rem;
+    color: white;
+    -webkit-text-stroke: 3px black;
+    font-family: simpson-font;
+}
+.link{
+    display: flex;
+    justify-content: center;
+}
+.des{
+    font-family:Arial, Helvetica, sans-serif ; 
+}
+.link{
+    height: 7%;
+}
+.calin{
+    height: 41vh;
+    width: 72vh;
+    border-radius: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+.conv{
+    display: flex;
+    justify-content: center;
+}
+.buton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+}
+.btn-primary{
+    background-color: white;
+    color: black;
 }
